--- a/src/semiff/config/defaults.yaml
+++ b/src/semiff/config/defaults.yaml
@@ -17,3 +17,8 @@ pipeline:
   keyframe_interval: 10  # 关键帧采样间隔
   icp_scale: true  # ICP是否允许尺度变换
   interactive_mode: true  # 是否开启交互式手动选点模式
+
+# === SAM 2 配置 ===
+# 强制使用 Small 模型以适配 3080Ti (12GB)
+checkpoint: "checkpoints/sam2_hiera_small.pt"
+model_cfg: "configs/sam2/sam2_hiera_s.yaml"
